Add Disqus for comments

--- a/_posts/2011-10-09-burning-house.html
+++ b/_posts/2011-10-09-burning-house.html
@@ -13,12 +13,8 @@ meta:
   superawesome: 'false'
   _edit_last: '1'
   jabber_published: '1318198316'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Flat mates are burning fish fingers again; what should I try and save this time?</p>
 
