--- a/_posts/2011-10-16-one-page-website.html
+++ b/_posts/2011-10-16-one-page-website.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1318797175'
   _wpas_skip_twitter: '1'
   _wp_old_slug: one-page-website-design-process
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <figure><a href="http://decnorton.com"><img class="size-full wp-image-75 " title="decnorton.com" src="/assets/screen-shot.png" alt="" /></a></figure>
 <p>Just putting the finishing touches on my one page website, thought I'd write a post about the kind of process I went through in designing and making it.</p>
