--- a/_posts/2011-11-10-digital-signature.html
+++ b/_posts/2011-11-10-digital-signature.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1320947053'
   email_notification: '1320947064'
   _wpas_done_twitter: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p><a title="Declan Norton by idat107, on Flickr" href="http://www.flickr.com/photos/pollenmagic/6264623386/"></p>
 <figure><img title="Digital Signature" src="/assets/digital-signature.png" /></figure>
