--- a/_posts/2011-11-21-blog-review.html
+++ b/_posts/2011-11-21-blog-review.html
@@ -13,12 +13,8 @@ meta:
   _edit_last: '1'
   jabber_published: '1321876270'
   email_notification: '1321876271'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Since starting this module, we've covered topics I'd expected but a lot more came as a surprise. In the first week we were asked to explore the idea of being a "cyborg", exploring the definition to a point I hadn't considered before. We thought about the extent that we would consider different technologies to be part of our lives. Whether we would think of them as a cognitive or a physical prosthesis. I found this a little strange at first, but it was only a taster of things to come.</p>
 
