--- a/_posts/2011-12-01-digital-tattoo.html
+++ b/_posts/2011-12-01-digital-tattoo.html
@@ -13,12 +13,8 @@ meta:
   _edit_last: '1'
   jabber_published: '1322774139'
   email_notification: '1322774141'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p><a href="/assets/tattoo1.jpg"></p>
 <figure><img title="Digital Tattoo" src="/assets/tattoo1.jpg" /></figure>
