--- a/_posts/2011-12-13-battleships.html
+++ b/_posts/2011-12-13-battleships.html
@@ -14,12 +14,8 @@ meta:
   superawesome: 'false'
   jabber_published: '1323794825'
   email_notification: '1323794999'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Managed to finish my Battleships game and get the majority of the features completed. I left it quite late as I was busy with other work so as a result the graphics were somewhat neglected. I may not have come up with the most efficient way of coding it, but it got the job done. Included everything bar networking; doesn't tickle my fancy just yet.</p>
 
