--- a/_posts/2012-02-23-ftp-delete-a-folder-using-php.html
+++ b/_posts/2012-02-23-ftp-delete-a-folder-using-php.html
@@ -14,12 +14,8 @@ meta:
   _edit_last: '1'
   jabber_published: '1329962427'
   email_notification: '1329962431'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Had to do this for a project recently. If you've any experience with FTP you'll know it's not the most efficient of protocols. If you want to make changes to a file or folder you have to deal with each file individually.</p>
 
