--- a/_posts/2012-11-30-plymouth-tea-party.html
+++ b/_posts/2012-11-30-plymouth-tea-party.html
@@ -9,12 +9,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Today we were tasked with creating a bit of GPS Art, which involves creating art using GPS co-ordinates. I used an application called Open GPS Tracker, which basically keeps a log of your location which can then be exported to a .kmz file.</p>
 <p>We looked at a map of Plymouth and saw the shape of a teapot in the road layout, so we set out to trace it and came up with this:</p>
