--- a/_posts/2012-12-16-semantic-app.html
+++ b/_posts/2012-12-16-semantic-app.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>For my Semantic app I decided to make a simple todo list application. It's all browser-based, meaning there's no communication with a server. It make use of a couple of HTML5 JavaScript APIs, including LocalStorage and FileReader.</p>
 <p>Try it out here: <a href="http://todo.decnorton.com/">todo.decnorton.com</a></p>
