--- a/_posts/2013-01-09-arduino-sound-machine.html
+++ b/_posts/2013-01-09-arduino-sound-machine.html
@@ -12,12 +12,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>First DAT206 session of the year and we're already getting stuck into Arduino. Today we made a basic "sound machine" using a light sensor and a buzzer. We read the light sensor value and told the buzzer to go off if the value dropped below 200 (ranges from 0 to 800ish).</p>
 
