--- a/_posts/2013-01-16-arduino-rfid-accelerometer.html
+++ b/_posts/2013-01-16-arduino-rfid-accelerometer.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Got the chance to play with a couple of new sensors in today's 206 session. Starting out getting an accelerometer to work, turns out it's pretty simple and spits out some usable values. More excitingly we got to play with RFID tags and readers.</p>
 
