--- a/_posts/2013-01-18-dat201-project.html
+++ b/_posts/2013-01-18-dat201-project.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>For our DAT201 project we've been asked to prepare a performative piece for an exhibition towards the end of the year. I've already started research for the essay exploring technology and art in practice, in which I chose to explore the relationship between music and technology and the evolution of interaction when producing music.</p>
 
