--- a/_posts/2013-01-31-html5-canvas-game.html
+++ b/_posts/2013-01-31-html5-canvas-game.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>We've recently started planning out our Canvas based game; Andy and I sat down to plan out a theme/game mechanics and we came up with the following.</p>
 
