--- a/_posts/2013-02-06-arduino-synthesizer.html
+++ b/_posts/2013-02-06-arduino-synthesizer.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Today we made a synthesizer using an Arduino and a five potentiometers.</p>
 
