--- a/_posts/2013-02-19-tamar-growsmart.html
+++ b/_posts/2013-02-19-tamar-growsmart.html
@@ -11,12 +11,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>As part of our Creative Industries module, we were required to liaise with and create a product or solution for <a href="http://tamargrowlocal.org">Tamar Grow Local</a>.</p>
 
