--- a/_posts/2013-02-20-arduino-puredata.html
+++ b/_posts/2013-02-20-arduino-puredata.html
@@ -10,12 +10,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Today, we got to play around with getting PureData again. We managed to get an Arduino to interface with PureData, allowing us to use sensors to control the audio output of our PureData patch.</p>
 
