--- a/_posts/2013-02-20-tamar-growsmart-development.html
+++ b/_posts/2013-02-20-tamar-growsmart-development.html
@@ -11,12 +11,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Development on the Tamar GrowSmart project was relatively pain-free as we had a good idea of what we wanted. To begin with, we planned out the app workflow.</p>
 
