--- a/_posts/2013-03-08-tamar-growsmart-data-structure.html
+++ b/_posts/2013-03-08-tamar-growsmart-data-structure.html
@@ -11,12 +11,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Actually developing the app was a bit more of a struggle. I had to decide what kind of data structure to use. At first I thought about storing the data in an SQLite database seeing as Android supports it natively, but decided against it once I realised it was a bit overkill for our needs. Also, the lack of a decent GUI made it difficult for others to interact with it.</p>
 
