--- a/_posts/2013-03-22-zombies-vs-wizards.html
+++ b/_posts/2013-03-22-zombies-vs-wizards.html
@@ -9,6 +9,7 @@ status: publish
 type: post
 published: true
 author: Dec Norton
+comments: true
 ---
 <p>A few things have changed since my last post on this, we have now changed the title to Wizards vs Zombie. The game mechanics are largely the same, it's still a top-down shooter, but the player can now roam the whole map.</p>
 <!--more-->
