--- a/_posts/2011-10-04-im-a-cyborg.html
+++ b/_posts/2011-10-04-im-a-cyborg.html
@@ -9,6 +9,7 @@ status: publish
 type: post
 published: true
 author: Dec Norton
+comments: true
 ---
 <p>Mind map thinking about whether us as humans can be considered cyborg. To what extent do we rely on technology?</p>
 <p><a href="http://prezi.com/cy0mpmzznzvh/dat102/" target="_blank">DAT102</a> on <a href="http://prezi.com" target="_blank">Prezi</a></p>
