--- a/_posts/2011-10-06-two-minute-video.html
+++ b/_posts/2011-10-06-two-minute-video.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1317857929'
   _oembed_9e9ee989ba7bd7d44421b1d6a67ec5d6: '{{unknown}}'
   _oembed_1e14768b22bdef168003ac47cd35da0c: '{{unknown}}'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>For my two minute video I was initially going to head down to the Barbican and film some of the hustle and bustle, though once down there I had an unfortunate accident resulting in the <a href="http://decnorton.dev/assets/dead-camera.jpg">death of my camera</a>.</p>
 <p>I wasn't able to get hold of another camera until Monday, but even then the Media Hub were clean out. Managed to acquire one on Tuesday afternoon; I was planning to go to the Open Mic anyway and thought it would be perfect! Unfortunately trying to storyboard such an event proved to be difficult as it wasn't really within my control. Nonetheless I attempted to predict the shots and luckily they didn't fall far from the eventual shots.</p>
