--- a/_posts/2011-11-10-public-intervention.html
+++ b/_posts/2011-11-10-public-intervention.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1320949236'
   email_notification: '1320949237'
   _wpas_done_twitter: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>We had a couple of cool ideas for this, we settled on creating stickers to raise awareness of public surveillance.</p>
 <p>It's not something I feel particularly strongly about and I felt pretty uncomfortable putting the stickers up. I wasn't a massive fan of this task.</p>
