--- a/_posts/2011-11-10-the-hangover-in-four-minutes.html
+++ b/_posts/2011-11-10-the-hangover-in-four-minutes.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1320948151'
   _wpas_done_twitter: '1'
   email_notification: '1320948214'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>This was supposed to be a crowd sourcing project, but I suppose our group jumped the gun a bit when we were shown <a title="sweding" href="http://en.wikipedia.org/wiki/Be_Kind_Rewind#.22Sweded.22" target="_blank">'sweding'</a>. We just wanted to have a laugh.</p>
 <p>We set out with a rough plan, giddy at the thought of Andy in a jockstrap being on YouTube for everyone to see. We'd managed to get the majority of filming done before the next session, where we were shown sites/projects such as the <a title="Johnny Cash Project" href="http://www.thejohnnycashproject.com/" target="_blank">Johnny Cash Project</a>. A lot of other groups decided to base there's on the same concept, posting messages and events on Facebook to try and get people involved.</p>
