--- a/_posts/2011-11-18-monk-abuse.html
+++ b/_posts/2011-11-18-monk-abuse.html
@@ -14,12 +14,8 @@ meta:
   jabber_published: '1321648123'
   _edit_last: '1'
   superawesome: 'false'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Stumbled across this nice little story whilst researching the electrical telegraph:</p>
 <blockquote><p>Jean-Antoine Nollet, the Abbot of the Grand Convent of the Carthusians in Paris decided to test his theory that electricity traveled far and fast. He did the natural thing on a fine spring day in 1746, sending 200 of his monks out in a line 1 mile long. Between each pair of monks was a 25-foot iron wire.</p>
