--- a/_posts/2013-03-20-tamar-growsmart-android-development.html
+++ b/_posts/2013-03-20-tamar-growsmart-android-development.html
@@ -11,12 +11,8 @@ type: post
 published: true
 meta:
   _edit_last: '1'
-author:
-  login: decnorton
-  email: decnorton@gmail.com
-  display_name: decnorton
-  first_name: ''
-  last_name: ''
+author: Dec Norton
+comments: true
 ---
 <p>Once we had the data in place and ready to be used, I started work on the Android development using the Android Developer Tools. I learnt a few new things on this project, including filtering <code>ListView</code>s and dealing with <code>DialogFragments</code>.</p>
 
