Update YT embed

--- a/_posts/2011-11-10-public-intervention.html
+++ b/_posts/2011-11-10-public-intervention.html
@@ -18,5 +18,9 @@ author: Dec Norton
 comments: true
 ---
 <p>We had a couple of cool ideas for this, we settled on creating stickers to raise awareness of public surveillance.</p>
+
 <p>It's not something I feel particularly strongly about and I felt pretty uncomfortable putting the stickers up. I wasn't a massive fan of this task.</p>
-<figure><iframe width="420" height="315" src="http://www.youtube.com/embed/Lnfcf114giw" frameborder="0" allowfullscreen></iframe></figure>
+
+<figure>
+    <iframe width="420" height="315" src="http://www.youtube.com/embed/Lnfcf114giw" frameborder="0" allowfullscreen></iframe>
+</figure>
