--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 layout: default
 ---
 
-<div class="home">
+<div id="home">
 
     {% assign posts = site.posts %}
-    {% include post-list.html posts=posts %}
 
-    <p class="rss-subscribe">
-        subscribe
-        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
-    </p>
+    {% include post-list.html posts=paginator.posts %}
+
+    {% include pagination.html %}
 
 </div>
